
  [ James Vega ]
  * debcheckout:
    + Filter TopGit branches out of the list of branches given to
      --git-track since "tg populate" already created them.
    + Determine the actual HEAD ref to skip when first cloning a git repo
      instead of assuming it is master.  This ensures branches don't get
      skipped when specifying extra branches to track with --git-track.

 -- Patrick Schoenfeld <schoenfeld@debian.org>  Fri, 09 Jan 2009 23:01:08 +0100

devscripts (2.10.44) unstable; urgency=low

  [ Adam D. Barratt ]
  * bts:
    + Allow an alternative debbugs server to be specified. (Closes: #508676)
    + Modify "bts status" to request source package information, so that we
      don't always return "unknown".
    + Don't issue repeated "user foo" commands for the same user.
    + Remove excess whitespace from usertag commands.
  * checkbashisms:
    + Rework the comment detection code to avoid matching "$#" and to avoid
      a number of similar issues. (Closes: #510343)
    + Flag the use of "source" with an unquoted argument containing no path
      information. (Closes: #510345)
  * Debbugs.pm: Allow the address of the debbugs server to be specified
    rather than hard-coding bugs.debian.org.
  * debchange:
    + Correctly increment bpo version numbers.
    + Attempt to do the right thing (or at least something sensible) if the
      package version ends in a tilde. (Closes: #510313)
  * debdiff:
    + Fix a couple of formatting issues in the manpage.
    + Mention --{no-,}diffstat in the help message.
    + Don't treat "DEBDIFF_SHOW_DIFFSTAT=no" as a modification from default
      settings.
  * licensecheck:
    + Add .cs (C# source files) to the default list of files to check.
      (Closes: #508163)
    + Detect the CDDL license. Thanks to Mike Hommey for the patch.
      (Closes: #510574)
  * uscan: Improve parsing of non-HTMLised FTP directory listings so that
    "foobar.tar.gz" doesn't match a request for "bar.tar.gz".
  * conf.default.in: